--- a/src/app/image-gallery/image-gallery.component.html
+++ b/src/app/image-gallery/image-gallery.component.html
@@ -16,3 +16,8 @@
   </div>
 </div>
 <h1>Alle Dateien</h1>
+<div class="image-wrapper">
+  <div class="img" *ngFor="let image of images">
+    <img src="{{image}}" alt="">
+  </div>
+</div>
