--- a/src/app/image-gallery/image-gallery.component.scss
+++ b/src/app/image-gallery/image-gallery.component.scss
@@ -17,3 +17,11 @@
 .image-wrapper:first-child {
   margin-right: 20px;
 }
+
+.image-wrapper .img {
+  max-width: 180px;
+}
+
+img {
+  width: 100%;
+}
