added upload video

--- a/src/app/video-gallery/video-gallery.component.html
+++ b/src/app/video-gallery/video-gallery.component.html
@@ -1,3 +1,10 @@
-<p>
-  video-gallery works!
-</p>
+<div class="images">
+  <div class="image-wrapper">
+    <h3>Mehrere Dateien hochladen</h3>
+    <sd-multiple-file-upload
+      [description]="'Beschreibung'"
+      [title]="'Titel'"
+      [url]="'SERVER-URL'"
+    ></sd-multiple-file-upload>
+  </div>
+</div>
