--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,6 +11,7 @@
       <div class="navigation-item"><a routerLink="/gallery/image">Bildergalerie</a></div>
       <div class="navigation-item"><a routerLink="/gallery/video">Videogalerie</a></div>
       <div class="navigation-item"><a routerLink="/gallery/audio">Audiogalerie</a></div>
+      <div class="navigation-item"><a routerLink="/webchat">Webchat</a></div>
       <div class="navigation-item"><a routerLink="/login">Login</a></div>
       <div class="navigation-item"><a routerLink="/logout">Log - out</a></div>
     </div>
